Fix: overflo-x bug on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,6 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+
 }
